# cpp-examples

./: .gitmodules  README.md  build.ninja
b-hacks/access-private-field/: main.cpp  private_accesor.hpp
b-hacks/function-access-restriction/: README.md  foo.cpp
b-hacks/hook/: README.md  hook_local_f.cpp
b-hacks/jit/: README.md  jit.cpp
b-hacks/trace/: README.md  main.cpp  trace.cpp
b-hacks/weak/: README.md  sqrt-with-cmath.cpp
binary-hacks/access-private-field/: README.md  main.cpp  private_accesor.hpp
binary-hacks/function-access-restriction/: libfoo.map
bit-op/: README.md  main.cpp
breakpoint/: README.md  main.cpp
bridge/: README.md  bridge.hpp  bridge_abstract.hpp  bridge_impl.hpp  main.cpp
constexpr/: README.md  main.cpp  person.cpp  person.hpp
coverage/: README.md  gcov_filter.py  run_coverage.sh
destructor/: README.md  main.cpp
eigen/: CMakeLists.txt  README.md  hello.cpp  matrix-to-quaternion.cpp
examples/lz4/: main.cpp  (+2 more)
file_io/: README.md  read.cpp  write.cpp  write_file_time_cheker.cpp
googletest/: CMakeLists.txt
googletest/test/: main.cpp
hash/: README.md  main.cpp  md5.cpp  sha1.cpp
header_preload/: README.md  main.cpp
include/: README.md  cmdline.h
libxml2/: CMakeLists.txt  README.md  main.cpp  sample.xml
performance/: README.md  main.cpp
pitfalls/: README.md
segmentation_fault/: README.md  main.cpp
signal/: README.md  main.cpp  sigwait_main.cpp  thread.cpp
singleton/: README.md  main.cpp
stack-study/: README.md  main.cpp
strace_ex/: README.md  main.cpp
thread_pool/: README.md  main.cpp  thread_pool.hpp
(+115 files in other folders)
